# Lumos

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml
src/lumos/: __init__.py  __main__.py  cli.py  config.py  drive.py  reminders.py  storage.py
tests/: conftest.py  test_cli.py  test_config.py  test_drive.py  test_facade.py  test_reminders.py  test_storage.py
web/v1.7.1/: Lumos-v1.7.1-standalone.html  README.md  lumos_v1.7.1_2026-05-20.jsx  lumos_v1.7_2026-05-20.jsx
